# blackcat-courses

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
courses/: README.md
docs/: conventions.md  roadmap.md
shared/scripts/: new-week.sh
shared/templates/: homework-README.md  week-README.md  week-notes.md
weeks/week01/: README.md  notes.md
weeks/week01/homework/: README.md
weeks/week02/: README.md  notes.md
weeks/week02/homework/: README.md
weeks/week02/homework/a-linked-list-game/: README.md  activity-diagram.mmd  class-diagram.mmd  game.js  index.html  lru.js  serve.sh  style.css
weeks/week02/homework/b-sequence-diagram/: README.md  generate_uml.py  sequence.mmd  sequence.puml  sequence.uml  source.py
weeks/week03/: README.md  notes.md  python-first-class-functions.md
weeks/week03/homework/: README.md
weeks/week03/homework/fortune-web/: README.md  app.py  conftest.py  pyproject.toml
weeks/week03/homework/fortune-web/fortune/: __init__.py  decorators.py  profile.py  readings.py  teller.py
weeks/week03/homework/fortune-web/static/: style.css
weeks/week03/homework/fortune-web/templates/: index.html
weeks/week03/homework/fortune-web/tests/: test_fortune.py
